# Drawing-App

./: .gitignore  Cargo.toml  Trunk.toml  index.html  main.js  package.json  tailwind.config.js
.github/workflows/: jekyll-gh-pages.yml
src/: input.css  main.rs
src/art_engine/: mod.rs
src/components/: mod.rs  shape_form.rs  text_form.rs
src/layout/: art_layout.rs  form_context.rs  mod.rs  theme_context.rs
src/views/: draw.rs  mod.rs
