[package]
name = "electron_draw2"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.19", features = ["csr"] }
leptos_router = "0.8.13"
reactive_stores = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3"
features = ["CanvasRenderingContext2d", "DomRectList", "DomRect", "TextMetrics"]
